plugins {
    id 'java'
}

group 'org.fpeterek.flightlidar48.validator'
version '1.0'

repositories {
    mavenCentral()
}

targetCompatibility = 14
sourceCompatibility = 14

dependencies {
    compile 'joda-time:joda-time:2.10.8'
    compile 'org.json:json:20200518'
    compile 'org.apache.kafka:kafka-clients:2.6.0'
    compile 'org.apache.kafka:kafka-streams:2.6.0'
    compile 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

compileJava {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs += '--enable-preview'
}

tasks.withType(Test).all {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

jar {
    manifest {
        attributes 'Main-Class': 'org.fpeterek.flightlidar48.validator.MainKt'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
